peac_dev/force-app/main/default/objects/Beneficial_Owner__c/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <formula>IF ($Setup.Marlin_Configuration__c.Beneficial_Owner_Home_Address_Required__c
   ,Contact__r.OtherCity
   , IF (!ISBLANK (Contact__r.OtherCity)
      ,Contact__r.OtherCity
      ,Contact__r.MailingCity)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact City</label>
    <type>Text</type>
</CustomField>