peac_dev/force-app/main/default/objects/Beneficial_Owner__c/fields/Contact_SSN__c.field-meta.xml
<CustomField>
    <fullName>Contact_SSN__c</fullName>
    <formula>Contact__r.SSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact SSN</label>
    <type>Text</type>
</CustomField>