peac_dev/force-app/main/default/objects/Beneficial_Owner__c/fields/Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_State__c</fullName>
    <formula>IF ($Setup.Marlin_Configuration__c.Beneficial_Owner_Home_Address_Required__c
   ,TEXT (Contact__r.OtherStateCode)
   ,IF (!ISBLANK (TEXT (Contact__r.OtherStateCode))
      ,TEXT (Contact__r.OtherStateCode)
      ,TEXT (Contact__r.MailingStateCode))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact State</label>
    <type>Text</type>
</CustomField>