peac_dev/force-app/main/default/objects/Beneficial_Owner__c/fields/Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street__c</fullName>
    <formula>IF ($Setup.Marlin_Configuration__c.Beneficial_Owner_Home_Address_Required__c
   ,Contact__r.OtherStreet
   ,IF (!ISBLANK (Contact__r.OtherStreet)
      ,Contact__r.OtherStreet
      ,Contact__r.MailingStreet)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Street</label>
    <type>Text</type>
</CustomField>